# game-of-life

./: CMakeLists.txt  LICENSE.md  README.md
src/: Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  Cell.h  EventHandler.h  FrameClock.h  FrameOverlay.h  Game.cpp  Game.h  GameEngine.cpp  GameEngine.h  InitState.cpp  InitState.h  InputManager.cpp  InputManager.h  RenderManager.cpp  RenderManager.h  Renderer.cpp  Renderer.h  Singleton.h  State.h  StateManager.cpp  StateManager.h  Updater.h  World.cpp  World.h  WorldRenderer.cpp  WorldRenderer.h  WorldState.cpp  WorldState.h  main.cpp
